# ActivityTracker

./: .gitignore  LICENSE  Makefile  README.md  build.ps1  setup-task.ps1
client/: Cargo.toml
client/src/: logger.rs  main.rs  sender.go  uploader.rs
server/: go.mod  server.go
