[package]
name = "rslogger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rslogger"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[target.'cfg(windows)'.build-dependencies]

[dependencies]
chrono = "0.4"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
